fixed overflow for window

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -32,12 +32,7 @@
 body {
   width: 100vw;
   height: 100vh;
-}
-
-@media (min-width: 768px) {
-  body {
-    overflow: hidden;
-  }
+  overflow: hidden;
 }
 
 #root {
